Fixed overflow on scroll.

--- a/website/static/css/feedback.css
+++ b/website/static/css/feedback.css
@@ -286,9 +286,10 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    margin-left: 10%;
+    margin-left: 13%;
     max-width:fit-content;
     position: relative;
+    overflow:hidden;
 }
 
 .scrollmsg {
